--- a/pet-clinic-web/src/main/resources/templates/owners/index.html
+++ b/pet-clinic-web/src/main/resources/templates/owners/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'owners')}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -7,15 +7,12 @@
 <body>
 <!--/*@thymesVar id="owner" type="guru.springframework.sfgpetclinic.model.Owner"*/-->
 
-    <h1 th:text="'List of Owners'">List of Owners...</h1>
-    <ul>
-        <li th:each="owner: ${owners}"><span th:text="${owner.firstName}"></span></li>
-    </ul>
-    <table>
+    <h2 th:text="'List of Owners'">List of Owners...</h2>
+    <table id="ownders" class="table table-striped">
         <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
+            <th style="width: 150px;">ID</th>
+            <th style="width: 150px;">First Name</th>
+            <th style="width: 150px;">Last Name</th>
         </tr>
         <tr th:each="owner: ${owners}">
             <td th:text="${owner.id}"></td>
