--- a/pet-clinic-web/src/main/resources/templates/vets/index.html
+++ b/pet-clinic-web/src/main/resources/templates/vets/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/layout :: layout (~{::body},'vets')}">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
     <!--/*@thymesVar id="vet" type="guru.springframework.sfgpetclinic.model.Vet"*/-->
-    <h1 th:text="'List of Vets'">List of Vets...</h1>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-        </tr>
-        <tr th:each="vet: ${vets}">
-            <td th:text="${vet.id}"></td>
-            <td th:text="${vet.firstName}"></td>
-            <td th:text="${vet.lastName}"></td>
-        </tr>
+    <h2 th:text="'List of Vets'">List of Vets...</h2>
+    <table id="vets" class="table table-striped">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr th:each="vet: ${vets}">
+                <td th:text="${vet.id}"></td>
+                <td th:text="${vet.firstName}"></td>
+                <td th:text="${vet.lastName}"></td>
+            </tr>
+        </tbody>
     </table>
 </body>
 </html>
